implement create table logic

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <table id="libaryTable">
+        <th>Title</th>
+        <th>Author</th>
+        <th>Pages</th>
+        <th>Read?</th>
+        <th class="button_column"></th>
+        <th class="button_column"></th>
+    </table>
+
+
 </body>
 </html>
