--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
         <th class="button_column"></th>
         <th class="button_column"></th>
     </table>
+    <form id='form'>
+        <div>
+            <label>Title</label>
+            <input type='text' name='title' class='book_submission'>
+        </div>
+        <div>
+            <label>Author</label>
+            <input type='text' name='author' class='book_submission'>
+        </div>
+        <div>
+            <label>Pages</label>
+            <input type='text' name='pages' class='book_submission'>
+        </div>
+        <div>
+            <label>Read?</label>
+            <select name='read' class='book_submission'>
+                <option value='' selected>Select</option>
+                <option value='yes'>yes</option>
+                <option value='no'>no</option>
+            </select>
+            <!-- <input type='text' name='read' class='book_submission'> -->
+        </div>
+    </form>
+    <button id='submit_btn'>Submit</button>
 
 
 </body>
