implement error handling for irregular pages inputs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <label>Pages</label>
-                <input type='text' name='pages' class='book_submission'>
+                <input type='number' name='pages' class='book_submission'>
             </div>
             <div>
                 <!-- <label>Read?</label> -->
